Feature/sinf 178 java version and test harness (#6)
* Bump java version in POM and make use of it

* Instruct buildpack to use JDK 11 for compilation

* Service layer test, README updated, separate some config etc