@@ -1,10 +1,9 @@
 package uk.gov.crowncommercial.dts.scale.cat.controller;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
+import com.rollbar.notifier.Rollbar;
 import lombok.RequiredArgsConstructor;
 import uk.gov.crowncommercial.dts.scale.cat.model.AgreementSummary;
 import uk.gov.crowncommercial.dts.scale.cat.service.AgreementsService;
@@ -17,10 +16,12 @@ import uk.gov.crowncommercial.dts.scale.cat.service.AgreementsService;
 public class AgreementsController {
 
   private final AgreementsService agreementsService;
+  private final Rollbar rollbar;
 
   @GetMapping("/agreement-summaries")
   public Set<AgreementSummary> getAgreementSummaries() {
-    return new HashSet<>(Arrays.asList(agreementsService.findAll()));
+    rollbar.debug("GET agreement summaries invoked");
+    return Set.of(agreementsService.findAll());
   }
 
 }
